# mlflow-s1

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  logs.txt  main.py  pyproject.toml  requirements.txt
api/: Dockerfile  main.py
dags/: model_training_pipeline.py
dags/model_training/: preprocessing_pipeline.py  train.py  train_main.py  train_test_split.py  utils.py
dags/model_training/data_preprocessing/: data_preprocessing.py
data_preprocessing/: data_preprocessing.py
mlflow/data_preprocessing/: data_preprocessing.py
mlruns/.trash/268658978943819359/: meta.yaml
mlruns/.trash/268658978943819359/dce8ab9dadd646338a016ae6ea6821ab/: meta.yaml
mlruns/.trash/382979283743291615/: meta.yaml
mlruns/.trash/382979283743291615/91e6c0cf195447c78e8f1ae6427f367c/: meta.yaml
mlruns/.trash/426531570611044905/: meta.yaml
mlruns/.trash/426531570611044905/a4aeab5bfb49468f951219e72b4b1137/: meta.yaml
mlruns/.trash/592271015747414075/: meta.yaml
mlruns/.trash/592271015747414075/b583467e9314467dac35f0ef80dc95b6/: meta.yaml
mlruns/0/: meta.yaml
mlruns/382979283743291615/: meta.yaml
mlruns/382979283743291615/91e6c0cf195447c78e8f1ae6427f367c/: meta.yaml
mlruns/382979283743291615/91e6c0cf195447c78e8f1ae6427f367c/metrics/: test_f1  test_precision  (+1 more)
mlruns/471831642321058757/: meta.yaml
mlruns/471831642321058757/a39ceb9284db491ba54a1cf3ef434e12/: meta.yaml
mlruns/models/rf_classifier/: meta.yaml
model_training/: Dockerfile  mlflow_utils.py  preprocessing_pipeline.py  train_main.py  train_test_split.py
(+32 files in other folders)
