[tool.poetry]
name = "mlops-s1"
version = "0.1.0"
description = "Project to demonstrate the use of mlflow, along with integrating with flask api"
authors = ["Shreejan Kisee <shreejan@fusemachines.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.1"
black = "^24.4.2"
flake8 = "^7.0.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
mlflow = "^2.12.2"
poetry-plugin-export = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
